fix(article-column): fixes the pic alignment problem

--- a/scss/theme/custom.scss
+++ b/scss/theme/custom.scss
@@ -591,6 +591,8 @@ section#news {
     .columns {
         margin-left: 0;
         margin-right: 0;
+        // to make the pics stick to the top
+        align-content: flex-start;
 
         .column-text-items {
             padding-right: 1rem;
